--- a/AutoCAD_DD/SectionConverterPlugin.csproj
+++ b/AutoCAD_DD/SectionConverterPlugin.csproj
@@ -116,6 +116,13 @@
     <Compile Include="Forms\InputHeightDialog.Designer.cs">
       <DependentUpon>InputHeightDialog.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\InputPointNumberDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\InputPointNumberDialog.Designer.cs">
+      <DependentUpon>InputPointNumberDialog.cs</DependentUpon>
+    </Compile>
+    <Compile Include="HandlerEntity\RoadSectionParametersExtractor.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -133,6 +140,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\InputHeightDialog.resx">
       <DependentUpon>InputHeightDialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\InputPointNumberDialog.resx">
+      <DependentUpon>InputPointNumberDialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
