--- a/AutoCAD_DD/SectionConverterPlugin.csproj
+++ b/AutoCAD_DD/SectionConverterPlugin.csproj
@@ -135,7 +135,7 @@
     <Compile Include="Forms\InputPointNumberDialog.Designer.cs">
       <DependentUpon>InputPointNumberDialog.cs</DependentUpon>
     </Compile>
-    <Compile Include="ModulToExportDocument\RoadSectionParametersExtractor.cs" />
+    <Compile Include="ModulToExportDocument\ExportSectionsDataForm.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -143,8 +143,8 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="PluginSettings.cs" />
-    <Compile Include="Size.cs" />
+    <Compile Include="ModulToExportDocument\PluginSettings.cs" />
+    <Compile Include="ModulToExportDocument\Size.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="CustomControls\RegExedTextBox.resx">
