added a new file module

--- a/AutoCAD_DD/SectionConverterPlugin.csproj
+++ b/AutoCAD_DD/SectionConverterPlugin.csproj
@@ -192,5 +192,8 @@
   <ItemGroup>
     <None Include="Resources\Image\windowSize.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Image\ExportArrow.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
